# Kaviani_LLM

./: README.md  pyproject.toml
MultiStageReasoning/: multi_stage_reasoning.py  tehran_article_en.txt  tehran_article_fa.txt
SelfCriticism/: 02-selfcritisistmlanggraph.ipynb
Sentimental/: app.py  appvibecoding.py  torchneuralnetworks.ipynb
VLGradioTax/: app.py  ocr_service.py
