[project]
name = "kaviani-exc"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=9.8.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.31.0",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "plotly>=6.8.0",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
]
